--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "my-v0-project",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=18.0.0 <21.0.0"
+  },
   "scripts": {
     "build": "next build",
     "dev": "next dev",
@@ -9,8 +12,8 @@
     "start": "next start"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.10.0",
-    "@paypal/react-paypal-js": "latest",
+    "@hookform/resolvers": "3.10.0",
+    "@paypal/react-paypal-js": "8.9.2",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -38,40 +41,40 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
-    "@vercel/analytics": "latest",
-    "autoprefixer": "^10.4.20",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
+    "@vercel/analytics": "1.5.0",
+    "autoprefixer": "10.4.20",
+    "class-variance-authority": "0.7.1",
+    "clsx": "2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
-    "ethers": "latest",
-    "geist": "latest",
+    "ethers": "6.15.0",
+    "geist": "1.5.1",
     "input-otp": "1.4.1",
-    "lucide-react": "^0.454.0",
-    "next": "14.2.16",
-    "next-themes": "latest",
-    "react": "^18",
+    "lucide-react": "0.454.0",
+    "next": "15.5.5",
+    "next-themes": "0.4.6",
+    "react": "19.2.0",
     "react-day-picker": "9.8.0",
-    "react-dom": "^18",
-    "react-hook-form": "^7.60.0",
-    "react-hot-toast": "latest",
-    "react-resizable-panels": "^2.1.7",
+    "react-dom": "19.2.0",
+    "react-hook-form": "7.60.0",
+    "react-hot-toast": "2.6.0",
+    "react-resizable-panels": "2.1.7",
     "recharts": "2.15.4",
-    "sonner": "latest",
-    "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7",
-    "vaul": "^0.9.9",
+    "sonner": "2.0.7",
+    "tailwind-merge": "2.5.5",
+    "tailwindcss-animate": "1.0.7",
+    "vaul": "0.9.9",
     "zod": "3.25.76"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.9",
-    "@types/node": "^22",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "postcss": "^8.5",
-    "tailwindcss": "^4.1.9",
+    "@tailwindcss/postcss": "4.1.9",
+    "@types/node": "22.18.10",
+    "@types/react": "18.3.26",
+    "@types/react-dom": "18.3.7",
+    "postcss": "8.5.6",
+    "tailwindcss": "4.1.9",
     "tw-animate-css": "1.3.3",
-    "typescript": "^5"
+    "typescript": "5.9.3"
   }
 }
